@@ -8,7 +8,12 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
+<<<<<<< HEAD
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
+=======
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+>>>>>>> b3a690b4c5174ee8ccff8da1bd84414226ce0d19
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.context.HttpSessionSecurityContextRepository;
@@ -18,8 +23,12 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+<<<<<<< HEAD
 import java.util.Collections;
 import java.util.UUID;
+=======
+import java.util.List;
+>>>>>>> b3a690b4c5174ee8ccff8da1bd84414226ce0d19
 
 @RestController
 @RequestMapping(path = "api")
@@ -39,17 +48,18 @@ public class AccountController {
      * @return ログインユーザー名
      */
     @PostMapping("login")
-    public ResponseEntity<String> login(@Valid @RequestBody LoginRequestDto request, HttpSession session) {
+    public ResponseEntity<LoginResponseDto> login(@Valid @RequestBody LoginRequestDto request, HttpSession session) {
         AccountEntity account = accountService.login(request.getMail(), request.getPassword());
         // セッション作成
         AccountSessionDto res = new AccountSessionDto(account.getId(), account.getMail(), account.getName());
-        Authentication authentication = new UsernamePasswordAuthenticationToken(res, null, Collections.emptyList());
+        List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority(account.getRole()));
+        Authentication authentication = new UsernamePasswordAuthenticationToken(res, null, authorities);
         SecurityContext context = SecurityContextHolder.createEmptyContext();
         context.setAuthentication(authentication);
         SecurityContextHolder.setContext(context);
         session.setAttribute(HttpSessionSecurityContextRepository.SPRING_SECURITY_CONTEXT_KEY, context);
 
-        return ResponseEntity.ok(account.getName());
+        return ResponseEntity.ok(new LoginResponseDto(account.getName(), account.getRole()));
     }
 
     /**
@@ -77,6 +87,7 @@ public class AccountController {
     }
 
     /**
+<<<<<<< HEAD
      * アカウント情報変更メソッド
      *
      * @param request 変更するアカウント情報
@@ -106,5 +117,17 @@ public class AccountController {
     ) {
         UUID response = accountService.putPassword(session.getId(), request);
         return ResponseEntity.status(HttpStatus.OK).body(response);
+=======
+     * 管理者が一般アカウントのパスワード変更を行うメソッド
+     *
+     * @param request アカウント情報と新しいパスワード
+     * @return NoContent
+     */
+    @PutMapping("admin/password")
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<Void> updatePasswordByAdmin(@Valid @RequestBody PasswordUpdateByAdminDto request) {
+        accountService.updatePasswordByAdmin(request);
+        return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
+>>>>>>> b3a690b4c5174ee8ccff8da1bd84414226ce0d19
     }
 }
